pricing: switched seconds to bootstrap dropdown, fixed vertical alignment on madlib form controls

--- a/static/less/pricing.less
+++ b/static/less/pricing.less
@@ -49,12 +49,16 @@
   line-height: 1;
 }
 
+.checks-madlib .dropdown-menu .btn-text {
+  color: #4d4d4d;
+}
+
 .checks-madlib .dropdown,
 .checks-madlib .form-control,
 .checks-madlib .custom-select {
   display: inline-block;
   position: relative;
-  top: 0;
+  top: -2px;
   width: auto;
   margin: 0;
   vertical-align: middle;
@@ -71,6 +75,7 @@
   font-weight: bold;
   border-radius: 0;
   box-shadow: 0 0 0;
+  line-height: 1;
 }
 
 .checks-madlib .dropdown-toggle,
